--- a/README
+++ b/README
@@ -1,2 +1,29 @@
 Compile the program with configure option --sysconfdir=/etc
 
+Notes for compiling the program:
+1. Default configuration files are installed in /etc/xdg/libfm.
+   GNU Autotools by default set sysconfdir to /usr/etc, which is not
+   used by us. So, make sure that you pass --sysconfdir=/etc to configure.
+
+Notes for runtime environment:
+1. The file alteration monitor is done via GFileMonitor built into glib.
+   It relies on inotify on Linux, kqueue on FreeBSD, and FAM or gamin
+   on others. On Linux, no additional dependency is needed. However,
+   for systems like NetBSD, you may need a working FAM daemon.
+
+2. To get remote filesystem support, trash:///, and computer:/// support,
+   libfm needs gvfs. Please install gvfs and its related backends
+   if you need these features.
+
+3. Volume management is done with glib, which relies on gvfs.
+   If you don't want to use gvfs, try the --enable-udisks configure option.
+   Libfm has a built-in volume management implementation done with udisks.
+   However, it's still experimental and may be unstable.
+   Use gvfs whenever possible.
+
+4. If you're using Linux, mounting volumes without root privileges is
+   supported by gvfs and udisks, given you have correct policy-kit
+   configurations. If you have problems mounting/unmounting devices,
+   check your policykit configurations. Either your permission settings
+   are wrong, or there is no policykit agent running. There must be 
+   something wrong and it's not a bug of libfm/pcmanfm.
