--- a/po/ar.po
+++ b/po/ar.po
@@ -47,7 +47,7 @@ msgstr "سطر أوامر مخصص"
 
 #: ../data/ui/app-chooser.glade.h:11
 msgid "Execute in terminal emulator"
-msgstr ""
+msgstr "تنفيذ في محاكي الطرفية"
 
 #: ../data/ui/app-chooser.glade.h:12
 msgid "Installed Application"
@@ -118,59 +118,59 @@ msgstr "<b>آخر وصول:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
 msgid "<b>Last Modification:</b>"
-msgstr ""
+msgstr "<b>أخر تعديلات:</b>"
 
 #: ../data/ui/file-prop.glade.h:7
 msgid "<b>Location:</b>"
-msgstr ""
+msgstr "<b>الموقع:</b>"
 
 #: ../data/ui/file-prop.glade.h:8
 msgid "<b>Open _with:</b>"
-msgstr ""
+msgstr "<b>إفتح بإستخام:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "<b>Other:</b>"
-msgstr ""
+msgstr "<b>:أخرى</b>"
 
 #: ../data/ui/file-prop.glade.h:10
 msgid "<b>Owner:</b>"
-msgstr ""
+msgstr "<b>المالك:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
 msgid "<b>Size on Disk:</b>"
-msgstr ""
+msgstr "<b>الحجم في القرص:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
 msgid "<b>Target:</b>"
-msgstr ""
+msgstr "<b>الهدف:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
 msgid "<b>Total Size of Files:</b>"
-msgstr ""
+msgstr "<b>الحجم الإجمالي للملفات:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
 msgid "<b>_Group:</b>"
-msgstr ""
+msgstr "<b>الم_جموعة:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
 msgid "<b>_Owner:</b>"
-msgstr ""
+msgstr "<b>الم_الك:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
 msgid "File Properties"
-msgstr ""
+msgstr "خصائص الملف"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "Make the file executable"
-msgstr ""
+msgstr "جعل الملف تنفيذي"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "None"
-msgstr ""
+msgstr "بدون"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Operations that all other users can do"
-msgstr ""
+msgstr "العمليات التي يمكن لكل المستخدمين القيام بها"
 
 #: ../data/ui/file-prop.glade.h:20
 msgid "Operations that the owner of the file can do"
@@ -182,11 +182,11 @@ msgstr ""
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
-msgstr ""
+msgstr "قراءة وكتابة"
 
 #: ../data/ui/file-prop.glade.h:23
 msgid "Read only"
-msgstr ""
+msgstr "قراءة فقط"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
@@ -194,70 +194,70 @@ msgstr ""
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
-msgstr ""
+msgstr "كتابة فقط"
 
 #: ../data/ui/file-prop.glade.h:26
 msgid "_General"
-msgstr ""
+msgstr "_عام"
 
 #: ../data/ui/file-prop.glade.h:27
 msgid "_Permissions"
-msgstr ""
+msgstr "ال_صلاحيات"
 
 #. Processing: <Name of currently proccesed file>
 #: ../data/ui/progress.glade.h:2
 msgid "<b>Processing:</b>"
-msgstr ""
+msgstr "<b>معالحة:</b>"
 
 #: ../data/ui/progress.glade.h:3
 msgid "<b>Progress:</b>"
-msgstr ""
+msgstr "<b>تقدُّم:</b>"
 
 #: ../data/ui/progress.glade.h:4
 msgid "<b>Some errors occurred:</b>"
-msgstr ""
+msgstr "<b>حدثت بعض الأخطاء</b>"
 
 #: ../data/ui/progress.glade.h:5
 msgid "<b>Time remaining:</b>"
-msgstr ""
+msgstr "<b>الوقت المتبقي:</b>"
 
 #. To: <Destination folder> ex. Copy file to..., Move file to...etc.
 #: ../data/ui/progress.glade.h:7
 msgid "<b>To:</b>"
-msgstr ""
+msgstr "<b>إلى:</b>"
 
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:9
 msgid "Preparing..."
-msgstr ""
+msgstr "تحضير..."
 
 #: ../data/ui/preferred-apps.glade.h:1
 msgid "<b>Mail client</b>"
-msgstr ""
+msgstr "<b>عميل البريد</b>"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Terminal Emulator</b>"
-msgstr ""
+msgstr "<b>محاكي الطرفية</b>"
 
 #: ../data/ui/preferred-apps.glade.h:3
 msgid "<b>Web Browser</b>"
-msgstr ""
+msgstr "<b>متصفّح وِب</b>"
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "Command line:"
-msgstr ""
+msgstr "سطر الأوامر:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
-msgstr ""
+msgstr "إرتباطات الملفات"
 
 #: ../data/ui/preferred-apps.glade.h:6 ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr ""
+msgstr "التطبيقات المفضّلة"
 
 #: ../data/ui/preferred-apps.glade.h:7
 msgid "System Applications"
-msgstr ""
+msgstr "تطبيقات النظام"
 
 #: ../data/ui/preferred-apps.glade.h:8
 msgid ""
@@ -271,11 +271,11 @@ msgstr ""
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
-msgstr ""
+msgstr "نفِذ الملف"
 
 #: ../data/ui/exec-file.glade.h:2
 msgid "Execute in _Terminal"
-msgstr ""
+msgstr "نفّذفي ال_طرفية"
 
 #: ../src/base/fm-utils.c:55 ../src/base/fm-utils.c:84
 #, c-format
@@ -286,63 +286,63 @@ msgstr[1] ""
 
 #: ../src/base/fm-utils.c:62
 msgid "KB"
-msgstr ""
+msgstr "كب"
 
 #: ../src/base/fm-utils.c:67
 msgid "MB"
-msgstr ""
+msgstr "مب"
 
 #: ../src/base/fm-utils.c:72
 msgid "GB"
-msgstr ""
+msgstr "جب"
 
 #: ../src/base/fm-utils.c:77
 msgid "TB"
-msgstr ""
+msgstr "تب"
 
 #: ../src/base/fm-utils.c:91
 msgid "KiB"
-msgstr ""
+msgstr "ك.ب"
 
 #: ../src/base/fm-utils.c:96
 msgid "MiB"
-msgstr ""
+msgstr "م.ب"
 
 #: ../src/base/fm-utils.c:101
 msgid "GiB"
-msgstr ""
+msgstr "ج.ب"
 
 #: ../src/base/fm-utils.c:106
 msgid "TiB"
-msgstr ""
+msgstr "ت.ب"
 
 #: ../src/base/fm-file-info.c:53
 msgid "Shortcuts"
-msgstr ""
+msgstr "إختصارات"
 
 #: ../src/base/fm-file-info.c:56
 msgid "Mount Point"
-msgstr ""
+msgstr "نقطة الضم"
 
 #: ../src/base/fm-path.c:729
 msgid "Trash Can"
-msgstr ""
+msgstr "سلة المهملات"
 
 #: ../src/base/fm-path.c:731
 msgid "My Computer"
-msgstr ""
+msgstr "حاسوبي"
 
 #: ../src/base/fm-path.c:739 ../src/gtk/fm-places-model.c:524
 msgid "Applications"
-msgstr ""
+msgstr "تطبيقات"
 
 #: ../src/base/fm-path.c:742
 msgid "Network"
-msgstr ""
+msgstr "شبكة"
 
 #: ../src/gtk/fm-progress-dlg.c:151
 msgid ": "
-msgstr ""
+msgstr ": "
 
 #: ../src/gtk/fm-progress-dlg.c:214 ../src/gtk/fm-progress-dlg.c:233
 #, c-format
@@ -351,6 +351,9 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
+"نوع: %s\n"
+"حجم: %s\n"
+"حرر: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:221 ../src/gtk/fm-progress-dlg.c:240
 #, c-format
@@ -358,6 +361,8 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
+"نوع: %s\n"
+"حرر: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:312
 msgid "The file operation is cancelled and there are some errors."
@@ -365,7 +370,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:314
 msgid "Cancelled"
-msgstr ""
+msgstr "أُلغي"
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "The file operation is finished, but there are some errors."
@@ -384,7 +389,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:433
 msgid ", "
-msgstr ""
+msgstr ", "
 
 #: ../src/gtk/fm-progress-dlg.c:448
 msgid "Moving files"
@@ -464,55 +469,55 @@ msgstr ""
 
 #: ../src/gtk/fm-places-view.c:109
 msgid "Empty Trash"
-msgstr ""
+msgstr "أفرغ المهملات"
 
 #: ../src/gtk/fm-places-view.c:721
 msgid "Enter a new name:"
-msgstr ""
+msgstr "أدخل إسم جديد:"
 
 #: ../src/gtk/fm-side-pane.c:49 ../src/gtk/fm-side-pane.c:297
 msgid "Places"
-msgstr ""
+msgstr "أماكن"
 
 #: ../src/gtk/fm-side-pane.c:50 ../src/gtk/fm-side-pane.c:307
 msgid "Directory Tree"
-msgstr ""
+msgstr "إسم الدليل"
 
 #: ../src/gtk/fm-side-pane.c:51
 msgid "Remote"
-msgstr ""
+msgstr "عن بعد"
 
 #: ../src/gtk/fm-file-menu.c:86 ../src/gtk/fm-file-menu.c:87
 msgid "Open With..."
-msgstr ""
+msgstr "فتح بـ..."
 
 #: ../src/gtk/fm-file-menu.c:92
 msgid "Rename"
-msgstr ""
+msgstr "أعد التسمية"
 
 #: ../src/gtk/fm-file-menu.c:93
 msgid "Create Symlink"
-msgstr ""
+msgstr "إنشاﺀ وصلة"
 
 #: ../src/gtk/fm-file-menu.c:94
 msgid "Send To"
-msgstr ""
+msgstr "أرسل إلى"
 
 #: ../src/gtk/fm-file-menu.c:95
 msgid "Compress..."
-msgstr ""
+msgstr "إضغط..."
 
 #: ../src/gtk/fm-file-menu.c:96
 msgid "Extract Here"
-msgstr ""
+msgstr "إستخرج هنا"
 
 #: ../src/gtk/fm-file-menu.c:97
 msgid "Extract To..."
-msgstr ""
+msgstr "إستخرج إلى..."
 
 #: ../src/gtk/fm-file-menu.c:258
 msgid "_Restore"
-msgstr ""
+msgstr "_إستعادة"
 
 #: ../src/gtk/fm-file-menu.c:259
 msgid "Restore trashed files to original paths"
@@ -520,7 +525,7 @@ msgstr ""
 
 #: ../src/gtk/fm-dnd-dest.c:387
 msgid "XDirectSave failed."
-msgstr ""
+msgstr "فشل XDirectSave."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:96
 msgid "Use selected application to open files"
@@ -532,43 +537,43 @@ msgstr ""
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:185
 msgid "Customize"
-msgstr ""
+msgstr "تخصيص"
 
 #: ../src/gtk/fm-folder-view.c:588
 msgid "Name"
-msgstr ""
+msgstr "إسم"
 
 #: ../src/gtk/fm-folder-view.c:607
 msgid "Description"
-msgstr ""
+msgstr "وَصف"
 
 #: ../src/gtk/fm-folder-view.c:614
 msgid "Size"
-msgstr ""
+msgstr "حجم"
 
 #: ../src/gtk/fm-folder-view.c:620
 msgid "Modified"
-msgstr ""
+msgstr "محرر"
 
 #: ../src/gtk/fm-app-menu-view.c:157
 msgid "Installed Applications"
-msgstr ""
+msgstr "التطبيقات المتبثة"
 
 #: ../src/gtk/fm-gtk-utils.c:45
 msgid "Error"
-msgstr ""
+msgstr "خطأ"
 
 #: ../src/gtk/fm-gtk-utils.c:55 ../src/gtk/fm-gtk-utils.c:67
 msgid "Confirm"
-msgstr ""
+msgstr "تأكيد"
 
 #: ../src/gtk/fm-gtk-utils.c:106
 msgid "Question"
-msgstr ""
+msgstr "أسئلة"
 
 #: ../src/gtk/fm-gtk-utils.c:282
 msgid "Please select a folder"
-msgstr ""
+msgstr "الرجاء تحديد مجلد"
 
 #: ../src/gtk/fm-gtk-utils.c:452
 msgid "Only system administrators have the permission to do this."
@@ -584,7 +589,7 @@ msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:598
 msgid "Rename File"
-msgstr ""
+msgstr "إعادة تسمية الملف"
 
 #: ../src/gtk/fm-gtk-utils.c:598
 msgid "Please enter a new name:"
@@ -608,11 +613,11 @@ msgstr ""
 
 #: ../src/gtk/fm-dir-tree-model.c:353
 msgid "<No Sub Folder>"
-msgstr ""
+msgstr "<No Sub Folder>"
 
 #: ../src/gtk/fm-dir-tree-model.c:355
 msgid "Loading..."
-msgstr ""
+msgstr "تحميل..."
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
@@ -638,169 +643,169 @@ msgstr ""
 
 #: ../src/gtk/fm-places-model.c:451
 msgid "Trash"
-msgstr ""
+msgstr "المهملات"
 
 #: ../src/gtk/fm-places-model.c:509
 msgid "Desktop"
-msgstr ""
+msgstr "سطح المكتب"
 
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr ""
+msgstr "قرص CD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr ""
+msgstr "قرص CD-ROM فارغ"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr ""
+msgstr "قرص CD-R"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr ""
+msgstr "قرص CD-R فارغ"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr ""
+msgstr "قرص إعادة كتابة"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr ""
+msgstr "قرص إعادة كتابة فارغة"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr ""
+msgstr "قرص DVD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr ""
+msgstr "قرص DVD-ROM فارغ"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr ""
+msgstr "قرص DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr ""
+msgstr "قرص DVD-RW فارغ"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr ""
+msgstr "قرص DVD-RAM"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr ""
+msgstr "قرص DVD-RAM فارغ"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr ""
+msgstr "قرص DVD+R"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr ""
+msgstr "قرص DVD+R فارغ"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr ""
+msgstr "قرص DVD+RW"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr ""
+msgstr "قرص DVD+RW فارغ"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr ""
+msgstr "قرص DVD+R DL"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr ""
+msgstr "قرص DVD+R DL فارغ"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr ""
+msgstr "قرص DVD+RW DL"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr ""
+msgstr "قرص DVD+RW DL فارغ"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr ""
+msgstr "قرص Blu-Ray"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr ""
+msgstr "قرص Blu-Ray فارغ"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr ""
+msgstr "قرص Blu-Ray R"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr ""
+msgstr "قرص Blu-Ray R فارغ"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr ""
+msgstr "قرص Blu-Ray RW"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr ""
+msgstr "قرص Blu-Ray RW فارغ"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr ""
+msgstr "قرص HD DVD"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr ""
+msgstr "قرص HD DVD فارغ"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr ""
+msgstr "قرص HD DVD-R"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr ""
+msgstr "قرص HD DVD-R فارغ"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr ""
+msgstr "قرص HD DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr ""
+msgstr "قرص HD DVD-RW فارغ"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr ""
+msgstr "قرص MO"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr ""
+msgstr "قرص MO فارغ"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr ""
+msgstr "قرص MRW"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr ""
+msgstr "قرص MRW فارغ"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr ""
+msgstr "قرص MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr ""
+msgstr "قرص MRW/W فارغ"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr ""
+msgstr "قرص ضوئي فارغ"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr ""
+msgstr "قرص ضوئي"
