--- a/po/he.po
+++ b/po/he.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-09 21:06+0200\n"
-"PO-Revision-Date: 2011-11-13 15:40+0200\n"
+"PO-Revision-Date: 2012-07-04 11:00+0200\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <sh.yaron@gmail.com>\n"
 "Language: he\n"
@@ -511,7 +511,7 @@ msgstr "שליחה אל"
 
 #: ../src/gtk/fm-file-menu.c:95
 msgid "Compress..."
-msgstr "בהליכי דחיסה..."
+msgstr "דחיסה..."
 
 #: ../src/gtk/fm-file-menu.c:96
 msgid "Extract Here"
