--- a/po/uk.po
+++ b/po/uk.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: lxfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 20:22+0300\n"
-"PO-Revision-Date: 2012-07-06 12:37+0200\n"
-"Last-Translator: Y P <yupadmin@gmail.com>\n"
+"PO-Revision-Date: 2012-07-06 13:33+0200\n"
+"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -145,9 +145,10 @@ msgstr "<b>Відкрити з:</b>"
 msgid "<b>Size on Disk:</b>"
 msgstr "<b>Розмір на диску:</b>"
 
+# "Опції" для співпадіння з підказками до цього.
 #: ../data/ui/file-prop.glade.h:11
 msgid "<b>Special bits:</b>"
-msgstr "<b>Особливі мітки:</b>"
+msgstr "<b>Особливі опції:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
 msgid "<b>Target:</b>"
@@ -235,7 +236,7 @@ msgstr "Хто може виконувати файл чи заходити до
 
 #: ../data/ui/file-prop.glade.h:33
 msgid "Who can read content of the file/directory"
-msgstr "Хто може отримувати вміст файли чи теки"
+msgstr "Хто може отримувати вміст файлу чи теки"
 
 #: ../data/ui/file-prop.glade.h:34
 msgid "_General"
@@ -326,7 +327,7 @@ msgstr "Виконати в _емуляторі терміналу"
 msgid "%u byte"
 msgid_plural "%u bytes"
 msgstr[0] "%u байт"
-msgstr[1] "%u байт"
+msgstr[1] "%u байти"
 msgstr[2] "%u байт"
 
 #: ../src/base/fm-utils.c:62
